<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/questionImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/question"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/textView"
            style="@style/StateOfTheCloud.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="15dp"
            android:text="@string/login_hotline_button"
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@mipmap/logo_horizontal"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/domenEdit"
        style="@style/StateOfTheCloud.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/login_domen_edit"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/dark"
        android:textSize="22sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/loginEdit"
        style="@style/StateOfTheCloud.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/login_login_edit"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/dark"
        android:textSize="22sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/passwordEdit"
        style="@style/StateOfTheCloud.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/login_password_edit"
        android:inputType="textPassword"
        android:nextFocusDown="@id/enterButton"
        android:textColorHighlight="@color/dark"
        android:textSize="22sp"
        tools:ignore="Autofill" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/registerButton"
                android:text="@string/login_register_button"
                style="@style/StateOfTheCloud.Button"
                android:gravity="start|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/recoverButton"
                android:text="@string/login_recover_button"
                style="@style/StateOfTheCloud.Button"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="start|center_vertical"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/enterButton"
            style="@style/StateOfTheCloud.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="@string/login_enter_button"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>